--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Connor Billen",
   "license": "MIT",
   "devDependencies": {
+    "jquery": "^2.2.4",
+    "underscore": "^1.8.3",
     "backbone": "^1.3.3",
     "bulma": "0.0.28",
     "chai": "^3.5.0",
