--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "author": "Connor Billen",
   "license": "MIT",
   "devDependencies": {
-    "jquery": "^2.2.4",
-    "underscore": "^1.8.3",
     "backbone": "^1.3.3",
+    "backbone.stickit": "^0.9.2",
     "bulma": "0.0.28",
     "chai": "^3.5.0",
     "grunt": "^1.0.1",
@@ -27,6 +26,8 @@
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-cucumber": "^0.3.0",
     "grunt-string-replace": "^1.2.1",
-    "load-grunt-tasks": "^3.5.0"
+    "jquery": "^2.2.4",
+    "load-grunt-tasks": "^3.5.0",
+    "underscore": "^1.8.3"
   }
 }
