--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "backbone.stickit": "^0.9.2",
     "bulma": "0.0.28",
     "chai": "^3.5.0",
+    "ejs": "^2.4.2",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-contrib-concat": "^1.0.1",
@@ -28,6 +29,7 @@
     "grunt-string-replace": "^1.2.1",
     "jquery": "^2.2.4",
     "load-grunt-tasks": "^3.5.0",
+    "uglify-js-harmony": "^2.6.2",
     "underscore": "^1.8.3"
   }
 }
